--- a/arch/arm/dts/imx8mp-trcnw400.dts
+++ b/arch/arm/dts/imx8mp-trcnw400.dts
@@ -19,8 +19,7 @@
 
 	memory@40000000 {
 		device_type = "memory";
-		reg = <0x0 0x40000000 0 0xc0000000>,
-		      <0x1 0x00000000 0 0xc0000000>;
+		reg = <0x0 0x40000000 0 0x80000000>;
 	};
 
 	reg_usb1_host_vbus: regulator-usb1-vbus {
