--- a/configs/imx8mp_trcnw400_defconfig
+++ b/configs/imx8mp_trcnw400_defconfig
@@ -96,6 +96,7 @@ CONFIG_SF_DEFAULT_SPEED=40000000
 CONFIG_SPI_FLASH_BAR=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_PHY_REALTEK=y
+CONFIG_PHY_ATHEROS=y
 CONFIG_DM_ETH=y
 CONFIG_PHY_GIGE=y
 CONFIG_DWC_ETH_QOS=y
