add trcnw400 board
  #Description: add trcnw400 board
  #Solution:
  #Product: [TRC-NW400]
  #Commit Reason:
  #Function Area: F_BOARD_CFG

Change-Id: I6d168a47fd623d450e158e47294496ce6fd0ae4a

--- a/configs/imx8mp_trcnw400_defconfig
+++ b/configs/imx8mp_trcnw400_defconfig
@@ -16,6 +16,7 @@ CONFIG_DM_GPIO=y
 CONFIG_USB_TCPC=y
 CONFIG_TARGET_IMX8MP_EVK=y
 CONFIG_SPL_SERIAL_SUPPORT=y
+CONFIG_TARGET_IMX8MP_TRCNW400=y
 CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
 CONFIG_NR_DRAM_BANKS=3
 CONFIG_SPL=y
