--- a/configs/imx8mp_m8mp553_defconfig
+++ b/configs/imx8mp_m8mp553_defconfig
@@ -28,6 +28,7 @@ CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_OF_BOARD_SETUP=y
 CONFIG_OF_SYSTEM_SETUP=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage-8mp-lpddr4.cfg"
+CONFIG_BOOTDELAY=1
 CONFIG_DEFAULT_FDT_FILE="imx8mp-m8mp553.dtb"
 CONFIG_BOARD_LATE_INIT=y
 CONFIG_ARCH_MISC_INIT=y
