[DDR] use dynamic method to check DDR type
 #  Description: use gpio3_7 ~ gpio3_9 to check DDR type (1G, 2G, 4G)
 #  Solution:
 #  Product: [M8MP553]
 #  Commit Reason:
 #  Function Area: F_DDR

Change-Id: Ieaa13ea45adbba87d689bdc4a6ccb8846d8ba6fb

--- a/board/freescale/imx8mp_m8mp553/Makefile
+++ b/board/freescale/imx8mp_m8mp553/Makefile
@@ -8,5 +8,6 @@ obj-y += imx8mp_m8mp553.o
 
 ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
-obj-$(CONFIG_IMX8M_LPDDR4) += lpddr4_timing.o
+obj-$(CONFIG_IMX8M_LPDDR4) += lpddr4_2g_id0_timing.o
+obj-$(CONFIG_IMX8M_LPDDR4) += lpddr4_4g_id0_timing.o
 endif
