[DTS] rename model name
  #  Description:
  #  Solution:
  #  Product: [M8MP553]
  #  Commit Reason:
  #  Function Area: F_DTS

Change-Id: I0e9d71f118f06daedc7ef2f655d1cac38de24c5f

--- a/arch/arm/dts/imx8mp-m8mp553.dts
+++ b/arch/arm/dts/imx8mp-m8mp553.dts
@@ -9,7 +9,7 @@
 #include "imx8mp.dtsi"
 
 / {
-	model = "NXP i.MX8MPlus LPDDR4 MPMP553 4G";
+	model = "DFI MPMP553";
 	compatible = "fsl,imx8mp-evk", "fsl,imx8mp";
 
 	chosen {
