[DDR] use DDR4G NT6AN1024F32AV 4G_ID_1
  #  Description: 4G_ID_1 : NT6AN1024F32AV
  #  Solution:
  #  Product: [M8MP553]
  #  Commit Reason:
  #  Function Area: F_DDR

Change-Id: I3f93dbd973e35bb7b20fa424c2e55f4a60859f30

--- a/board/freescale/imx8mp_m8mp553/Makefile
+++ b/board/freescale/imx8mp_m8mp553/Makefile
@@ -10,4 +10,5 @@ ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
 obj-$(CONFIG_IMX8M_LPDDR4) += lpddr4_2g_id0_timing.o
 obj-$(CONFIG_IMX8M_LPDDR4) += lpddr4_4g_id0_timing.o
+obj-$(CONFIG_IMX8M_LPDDR4) += lpddr4_4g_id1_timing.o
 endif
