[SOC] use GPIO3_IO07(pin 71, bit 0) distinguish soc type
  #  Description:
     =================================
     bit2 bit1 bit0
     ---------------------------------
      0    1    0     2G CPU 95 °C
     ---------------------------------
      0    1    1     2G CPU 105°C
     ---------------------------------
      1    1    0     4G CPU 95 °C
     ---------------------------------
      1    1    1     4G CPU 105°C
     ---------------------------------

  #  Solution:
  #  Product: [M8MP553]
  #  Commit Reason:
  #  Function Area: F_THERMAL|F_SOC

Change-Id: Id4aee1dc3e439e840160e2fd60469408a7abf8fc

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -1742,6 +1742,12 @@ config CMD_QFW
 	  feature is to allow easy loading of files passed to qemu-system
 	  via -kernel / -initrd
 
+config IMX8MP_SOC_ID
+	bool "imx8mp soc type id"
+	depends on TARGET_IMX8MP_M8MP553
+	help
+	  use gpio to distinguish soc type (thermal temperature)
+
 source "cmd/mvebu/Kconfig"
 
 config CMD_TERMINAL
