--- a/configs/imx8mp_m8mp553_defconfig
+++ b/configs/imx8mp_m8mp553_defconfig
@@ -55,6 +55,7 @@ CONFIG_CMD_DHCP=y
 CONFIG_CMD_MII=y
 CONFIG_CMD_PING=y
 CONFIG_CMD_CACHE=y
+CONFIG_IMX8MP_SOC_ID=y
 CONFIG_CMD_REGULATOR=y
 CONFIG_CMD_EXT2=y
 CONFIG_CMD_EXT4=y
